Gettask/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gettask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gettask
  template:
    metadata:
      labels:
        app: gettask
    spec:
      containers:
      - name: gettask
        image: todoappacr111.azurecr.io/gettask:latest
        ports:
        - containerPort: 8000
