Gettask/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gettask
  labels:
    name: gettask
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: gettask.dev28.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gettask
            port: 
              number: 80
